# bevy_undertale

./: Cargo.toml  README.md
assets/data/: assets.toml  data.toml
assets/sprites/: bipedpotato.aseprite
src/: main.rs
src/game/: game.rs  mod.rs
src/game/animation/: animation.rs
src/game/camera/: mod.rs  target.rs
src/game/data/: data.rs
src/game/loading/: loading.rs
src/game/physics/: mod.rs  physics.rs  physics_object.rs  timestep.rs
src/game/player/: player.rs
src/game/scene/: attacks.rs  battle.rs  bullet_board.rs  decisions.rs  dodging.rs  fight.rs  menu.rs  menu_transition.rs  mod.rs  opponent.rs  progress.rs  scene.rs  selection.rs  stats.rs  text.rs
src/game/scene/internal/: attack.rs  bullet_board.rs  decisions.rs  dodging.rs  enemy_health.rs  fight.rs  health.rs  menu.rs  mod.rs  opponent.rs  progress.rs  selection.rs  stats.rs  text.rs
src/game/scene/internal/death/: enemy_death.rs  restart_screen.rs
src/game/scene/internal/helpers/: despawn.rs  mod.rs
