[package]
name = "bevy_undertale"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"

bevy = { version = "0.16.0",features = ["dynamic_linking","wav"]}
bevy_dylib = "0.16.0"

bevy_ecs_tilemap = {version = "0.16.0", features = ["atlas"]}

tiled = { version = "0.11.0", default-features = false }
thiserror = { version = "1.0" }


bytemuck = "1.7"
serde_spanned = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
crevice = "0.16.0"
toml = "0.8.19"
bevy-inspector-egui = "0.31"

[profile.dev]
opt-level = 1
